--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -35,7 +35,15 @@ ol {
   padding: 0;
   margin: 0;
 }
-
+.container {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+.container::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
+}
 .social-inner {
   display: flex;
   flex-direction: column;
