images and refactoring

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -55,6 +55,10 @@ ol {
   color: rgba(255, 255, 255, 0.5);
 }
 
+.my-card {
+  height: 500px;
+}
+
 .social-container .col {
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
